# font-tool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
font-tool/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  CharEncoding.h  CharEncoding.m  CharEncoding.mm  Common.h  Common.m  CopyLibs.sh  GlyphCollectionViewController.h  GlyphCollectionViewController.m  GlyphCollectionViewHeader.xib  GlyphCollectionViewItem.h  GlyphCollectionViewItem.m  GlyphCollectionViewItem.xib  GlyphImageView.h  GlyphImageView.m  GlyphInfoViewController.h  GlyphInfoViewController.m  GlyphLookupWindowController.h  GlyphLookupWindowController.m  GlyphTableWindow.storyboard  GlyphTableWindowController.h  GlyphTableWindowController.m  HarfbuzzEx.cpp  HarfbuzzEx.h  HtmlTableView.h  HtmlTableView.m  LuaBind.h  LuaScript.h  LuaScript.mm  LuaScriptConsole.h  LuaScriptConsole.m  LuaScriptConsole.storyboard  Main.storyboard  MainMenu.xib  ShapingWindow.storyboard  ShapingWindowController.h  ShapingWindowController.m  Shapper.h  (+39 more)
font-tool/Resources/: AppIcon.icns  DevLinks.plist
font-tool/Resources/Assets.xcassets/Cancel.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Clear.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/ContextualAlternative.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/CopyText.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/DiscretionaryLigature.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Filter.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Fractions.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/History.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/OK.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/OK_Color.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Open.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Ordinals.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Run.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Save.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Script.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Search.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Shape.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/ShapingShowLines.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/ShapingShowOrigin.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/ShapingText.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/StandardLigature.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/StylisticAlternative.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Swash.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/Table.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/TitlingAlternative.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/UnAssigned.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/glyphMetricsHori.imageset/: Contents.json
font-tool/Resources/Assets.xcassets/glyphMetricsVert.imageset/: Contents.json
font-tool/Resources/SampleScripts/: kern.lua  template.lua
font-tool/Resources/psd/: AppIcon.psd  dlig.psd  filter  frac.psd  liga.psd  ordn.psd  salt.psd  search.psd  shape.psd  shaping.psd  swash.psd  table.psd  titl.psd
pkgconfig/: freetype2.pc  harfbuzz-icu-freetype.pc
